# Numerical-analysis

./: PlotGraph.nb  README.md
Lab1/: CMakeLists.txt  Gauss.hpp  QR.cpp  QR.h  gauss.cpp  gauss.h  generalMethods.cpp  generalMethods.h  invertibleMatrixGauss.cpp  main.cpp  sourceMatrices.cpp  sourceMatrices.h  vectorOperations.cpp  vectorOperations.h  workWithConsole.cpp  workWithConsole.h
Lab2/: CMakeLists.txt  DiagIterativeMethod.hpp  DiagMethodRelaxation.hpp  DiagMethodSeidel.hpp  IterativeMethods.hpp  MethodJacobi.hpp  MethodRelaxation.hpp  MethodSeidel.hpp  SimpleIteration.hpp  main.cpp  matrixOperations.cpp  matrixOperations.h  sourceMatrices.cpp  sourceMatrices.h  vectorOperations.cpp  vectorOperations.h  workWithConsole.cpp
Lab2/systems/: DATA1.txt
Lab3/: CMakeLists.txt  ChebyshevGrid.h  Grid.h  Interpolate.h  Lagrange.h  UniformGrid.h  accurate.txt  functions.h  main.cpp
Lab3/Grids/: Grid.h
Lab3/Interpolating/: CubicSpline.h  Interpolate.h  Lagrange.h
Lab3/files/: accurCUB1.txt  accurCUB2.txt  accurCUB3.txt  accurLC1.txt  accurLC2.txt  accurLC3.txt  accurLU1.txt  accurLU2.txt  accurate.txt  approx.txt  approxCUB1.txt  approxCUB2.txt  approxCUB3.txt  approxLC1.txt  approxLC2.txt  approxLC3.txt  approxLU1.txt  approxLU2.txt  approxLU3.txt
Lab3/helping/: matrixOperations.h  vectorOperations.cpp
Lab3/solveSystem/: Sweep.h
Lab3/tests/: functions.h
Lab6/: Adams4.h  CMakeLists.txt  ExplicitEuler.h  ImplicitEuler.h  PlotGraphics.nb  PredCor.h  RK.h  RK4.h  SolveMethod.h  SymScheme.h  main.cpp  matrixOperations.cpp  matrixOperations.h  tests.h  vectorOperations.cpp  vectorOperations.h
Lab6/Euler/: ExplicitEuler.h  ImplicitEuler.h
Lab6/Newton/: SystemSolveNewton.h
Lab6/files/: U.txt  tau.txt
(+80 files in other folders)
